// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/global/config/parse/host-rules-from-env regression test for #10937 1`] = `
Array [
  Object {
    "hostType": "git-tags",
    "matchHost": "gitlab.example-domain.net",
    "password": "some-password",
    "username": "some-user",
  },
]
`;

exports[`workers/global/config/parse/host-rules-from-env supports datasource env token 1`] = `
Array [
  Object {
    "hostType": "pypi",
    "token": "some-token",
  },
]
`;

exports[`workers/global/config/parse/host-rules-from-env supports docker username/password 1`] = `
Array [
  Object {
    "hostType": "docker",
    "password": "some-password",
    "username": "some-username",
  },
]
`;

exports[`workers/global/config/parse/host-rules-from-env supports domain and host names with case insensitivity 1`] = `
Array [
  Object {
    "hostType": "github-tags",
    "matchHost": "github.com",
    "token": "some-token",
  },
  Object {
    "hostType": "pypi",
    "matchHost": "my.custom.host",
    "password": "some-password",
  },
]
`;

exports[`workers/global/config/parse/host-rules-from-env supports password-only 1`] = `
Array [
  Object {
    "hostType": "npm",
    "password": "some-password",
  },
]
`;
